--- a/app/src/main/res/layout/fragment_site_livro.xml
+++ b/app/src/main/res/layout/fragment_site_livro.xml
@@ -1,10 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="br.com.vinypaulino.mobile.carros.fragments.SiteLivroFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Página do Livro Aqui" />
+        android:text="Pagina do Livro Aqui"
+        android:layout_gravity="center"/>
+
 </FrameLayout>
