--- a/app/src/main/res/layout/fragment_site_livro.xml
+++ b/app/src/main/res/layout/fragment_site_livro.xml
@@ -1,14 +1,23 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.vinypaulino.mobile.carros.fragments.SiteLivroFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeToRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    </android.support.v4.widget.SwipeRefreshLayout>
+    <ProgressBar
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pagina do Livro Aqui"
         android:layout_gravity="center"/>
 
 </FrameLayout>
